# RocketDiesel

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/authentication/: Cargo.toml
src/database/: Cargo.toml
src/database/migrations/2018-09-20-064952_create_users/: up.sql
src/database/src/: lib.rs  schema.rs
src/database/src/models/: user.rs
src/derives/: Cargo.toml
src/error/: Cargo.toml
src/error/src/: lib.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/server/: Cargo.toml
src/server/src/: lib.rs
src/server/src/requests/: user.rs
src/server/src/routes/: mod.rs  user.rs
